--- a/templates/login.html
+++ b/templates/login.html
@@ -9,12 +9,19 @@
     <style>
       .alert {
         padding: 10px;
-        background-color: #f44336;
         color: white;
         border-radius: 50px;
         margin-top: 20px;
         margin-left: 10px;
         margin-right: 10px;
+      }
+
+      .pass {
+        background-color: #4CAF50;
+      }
+
+      .fail {
+        background-color: #f44336;
       }
       
       .closebtn {
@@ -41,10 +48,17 @@
           <form class="form" action="{{url_for('login')}}" method="POST">
             <div class="header header-text header-primary">LOGIN</div>
             {% for msg in get_flashed_messages() %}
-              <div class="alert">
-                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-                  {{msg}}
-              </div>
+              {% if msg[0]=="1" %}  
+                <div class="alert pass">
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                    {{msg[1:]}}
+                </div>
+              {% else %}
+                <div class="alert fail">
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                    {{msg}}
+                </div>
+              {% endif %}
             {% endfor %}
             <div class="form-container mt-20 p-15">
               <div class="form-group">
