--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Register - Stackoverflow lite</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}" />
+    <style>
+      .alert {
+        padding: 10px;
+        background-color: #f44336;
+        color: white;
+        border-radius: 50px;
+        margin-top: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+      
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      
+      .closebtn:hover {
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <div class="main header-bg">
